# mirel_backend

./: .gitignore  Makefile  pyproject.toml
deploy/: .env.dev.example  .env.prod.example  Dockerfile  dev.docker-compose.yml  docker-compose.yml
mirel/config/: alembic.ini  initialization.py  settings.py
mirel/core/: dto.py  entities.py  enums.py  exceptions.py  protocols.py  services.py
mirel/core/handlers/: __init__.py  forwarding_feedback.py  get_image.py  type_object_create.py  type_object_get_all.py  type_solution_create.py  type_solution_get_all.py
mirel/core/handlers/article/: __init__.py  create.py  get.py  get_all.py
mirel/core/handlers/product/: __init__.py  add_photo.py  create.py  get.py  get_all.py  get_by_filters.py
mirel/infrastructure/: images.py
mirel/infrastructure/email/: __init__.py  email.py
mirel/infrastructure/jinja_templates/: feedback_tmp.html
mirel/infrastructure/store/cloud/: __init__.py  protocols.py
mirel/infrastructure/store/cloud/gateways/: __init__.py  article.py  base.py  image.py  product.py
mirel/infrastructure/store/cloud/service/: __init__.py  yandex.py
mirel/infrastructure/store/sqlalchemy/: __init__.py  connect.py
mirel/presentation/api/: main.py  open_api.py  routes.py
mirel/presentation/api/di/: di.py  provides.py  stubs.py
mirel/presentation/api/v1/: article.py  dto.py  email.py  field_templates.py  image.py  product.py  type_object.py  type_solution.py  work_with_files.py
mirel/presentation/cli/: add_type_objects.py  add_type_solution.py  get_yandex_token.py
(+26 files in other folders)
